# imp

./: .gitignore  .index.md  README.md  TESTING.md  pyproject.toml
examples/: executor-spec.json  imp-spec.json
src/imp/: .index.md  __init__.py
src/imp/cli/: .index.md  __init__.py  main.py  metrics_cli.py
src/imp/context/: .index.md  __init__.py  cli.py  indexer.py  models.py  parser.py  scanner.py  staleness.py  summarizer.py  summary_cache.py
src/imp/executor/: .index.md  __init__.py  cli.py  context.py  logger.py  models.py  pipeline.py  session.py  worktree.py
src/imp/interview/: .index.md  __init__.py  cli.py  models.py  validator.py
src/imp/metrics/: .index.md  README.md  __init__.py  aggregator.py  collector.py  migration.py  models.py  query.py  storage.py  store.py
src/imp/pm/: .index.md  __init__.py  base.py  cli.py  mapper.py  models.py  plane.py
src/imp/providers/: .index.md  __init__.py  base.py  claude_sdk_model.py  config.py  pricing.py  pydantic_ai.py
src/imp/review/: .index.md  __init__.py  cli.py  (+3 more)
tests/: .index.md  conftest.py  test_cli.py
tests/cli/: test_metrics_cli.py
tests/context/: .index.md  test_cli.py  test_indexer.py  test_models.py  test_parser.py  test_scanner.py  test_staleness.py  test_summarizer.py  test_summary_cache.py
tests/e2e/: .index.md
tests/executor/: test_cli.py  test_context.py  test_logger.py  test_models.py  test_pipeline.py  test_session.py  test_worktree.py
tests/integration/: .index.md  test_claude_sdk_integration.py  test_context_integration.py  test_executor_integration.py  test_interview_integration.py  test_metrics_integration.py  test_metrics_store_integration.py  test_pm_integration.py  test_provider_integration.py  test_review_integration.py  test_validation_integration.py
tests/interview/: .index.md  test_cli.py  test_models.py  test_validator.py
tests/metrics/: .index.md  test_aggregator.py  test_collector.py  test_migration.py  test_models.py  test_query.py  test_storage.py  test_store.py
tests/pm/: .index.md  __init__.py  test_base.py  test_cli.py  test_mapper.py  test_models.py  test_plane.py
tests/providers/: .index.md  test_base.py  test_claude_sdk_model.py  test_config.py  test_pricing.py  test_pydantic_ai.py  test_pydantic_ai_claude_sdk.py
tests/review/: .index.md  __init__.py  test_models.py  test_runner.py
tests/smoke/: .index.md  __init__.py  smoke_test_context.py  smoke_test_executor.py  smoke_test_interview.py  smoke_test_metrics.py  smoke_test_pm.py  smoke_test_provider.py  smoke_test_review.py  smoke_test_validation.py
tests/validation/: .index.md  test_cli.py  test_detector.py  test_fixer.py  test_gates.py  test_models.py  test_runner.py
(+15 files in other folders)
