[project]
name = "impx"
version = "0.1.0-dev"
description = "AI-powered engineering workflow framework — planning, validation, review, metrics."
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "Josh Hall" },
]
keywords = ["ai", "workflow", "engineering", "validation", "review", "metrics"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Build Tools",
]
dependencies = [
    "typer[all]>=0.9",
    "rich>=13.0",
    "pydantic>=2.0",
    "pydantic-ai>=1.0",
]

[project.optional-dependencies]
claude-sdk = [
    "claude-agent-sdk>=0.1.35",
]

[project.scripts]
imp = "imp.cli.main:app"

[project.urls]
Homepage = "https://github.com/halljoshr/imp"
Repository = "https://github.com/halljoshr/imp"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/imp"]

[dependency-groups]
dev = [
    "ruff>=0.4",
    "mypy>=1.10",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "import-linter>=2.0",
]

[tool.ruff]
target-version = "py312"
line-length = 99
exclude = ["current_ai", "research"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "--cov=imp --cov-branch --cov-fail-under=100 --cov-report=term-missing:skip-covered"
asyncio_mode = "auto"

[tool.coverage.run]
omit = [
    # Omit unimplemented modules until they're built
    "src/imp/cli/main.py",
    "src/imp/context/*",
    "src/imp/validation/*",
    "src/imp/interview/skills/*",
    "src/imp/pm/*",
    "src/imp/review/*",
    "src/imp/executor/*",
]

[tool.importlinter]
root_packages = ["imp"]
include_external_packages = true

[[tool.importlinter.contracts]]
name = "L0 foundation has no internal dependencies"
type = "independence"
modules = [
    "imp.metrics",
    "imp.context",
    "imp.providers",
]

[[tool.importlinter.contracts]]
name = "Layered architecture"
type = "layers"
layers = [
    "imp.cli",
    "imp.executor | imp.review | imp.interview | imp.pm",
    "imp.validation",
    "imp.providers | imp.metrics | imp.context",
    "imp.types",
]
